Fix: Style Icon „Zoom to feature“ on mobile devices #203

--- a/components/style/IdentifyViewer.css
+++ b/components/style/IdentifyViewer.css
@@ -117,6 +117,8 @@ div.identify-body .identify-result-title {
 
 div.identify-body .identify-result-title > span:first-child {
     flex: 1 1 auto;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 div.identify-body .identify-result-title > span.icon {
